# mastodon-self-post-meilisearch

./: .env.sample  .gitignore  Cargo.toml
src/: main.rs
